--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,6 @@ body._lock {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 0 20px 0;
   padding: 20px;
 }
 
@@ -394,7 +393,7 @@ body._lock {
 .subtitle {
   text-align: center;
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 0 auto 20px auto;
   line-height: 1.2;
   font-size: 16px;
   font-weight: 500;
@@ -443,7 +442,6 @@ body._lock {
   font-weight: 300;
 }
 .discription_title_block1 ul, .discription_title_block2 ul {
-  padding: 20px 0 0 0;
   min-height: 80%;
 }
 .discription_title_block1 ul:last-child, .discription_title_block2 ul:last-child {
@@ -613,6 +611,7 @@ body._lock {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 20px;
+  font-size: 16px;
 }
 
 .view_more_btn {
