--- a/css/style.css
+++ b/css/style.css
@@ -487,6 +487,51 @@ body._lock {
   opacity: 1;
 }
 
+.products_block {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 75px 0;
+}
+
+.fish_cut_container {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.fish_cut_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.product_fish_cut {
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.image_fish_cut {
+  max-width: 250px;
+}
+
+.title_product_fish_cut {
+  max-width: 250px;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #000000;
+  text-align: center;
+  padding: 10px;
+  height: 80px;
+  background-color: rgba(221, 218, 218, 0.9529411765);
+}
+
 .partners_block {
   margin: 0 auto;
   padding: 75px 0;
