--- a/css/style.css
+++ b/css/style.css
@@ -491,6 +491,8 @@ body._lock {
   max-width: 900px;
   margin: 0 auto;
   padding: 75px 0;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(80%, rgb(255, 255, 255)), color-stop(84%, rgb(187, 187, 187)), color-stop(88%, rgb(46, 46, 46)), color-stop(90%, rgb(28, 27, 27)), color-stop(95%, rgb(0, 0, 0)));
+  background: linear-gradient(to bottom, rgb(255, 255, 255) 80%, rgb(187, 187, 187) 84%, rgb(46, 46, 46) 88%, rgb(28, 27, 27) 90%, rgb(0, 0, 0) 95%);
 }
 
 .fish_cut_container {
