--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url('https://api.fontshare.com/v2/css?f[]=satoshi@900,500,300&display=swap" rel="stylesheet');
 /*Обнуление*/
 * {
   padding: 0;
@@ -90,80 +89,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 10;
-  background-color: #111111;
-}
-
-.header__container {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 70px;
-}
-
-.header__logo {
-  padding: 5px;
-  height: 68px;
-  position: relative;
-  z-index: 10;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.header__menu {
-  width: 100%;
-}
-
-.menu__list {
-  height: 30px;
-}
-
-.menu__link {
-  color: #ffffff;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 5px;
-}
-
-.menu__link:hover {
-  background-color: #ffffff;
-  color: #111111;
-  border-radius: 50px;
-}
-
-.menu__body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 body {
   max-width: 100%;
   font-family: "Roboto", sans-serif;
@@ -175,7 +100,7 @@ body._lock {
 
 .page {
   padding-top: 70px;
-  max-width: 100%;
+  width: 100%;
 }
 
 .logo_baner_container {
@@ -188,8 +113,8 @@ body._lock {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: url(/img/bg_section_1.jpg) 50%/cover no-repeat fixed;
-  margin: 0 auto 20px auto;
+  background: url(/img/bg_section_1.jpg) 50%/cover no-repeat;
+  margin: 0 auto;
 }
 
 .logo_banner_block {
@@ -258,6 +183,18 @@ body._lock {
   border-radius: 50%;
 }
 
+.img_cooking_process_5 {
+  background: url(/img/img_4.png) 0 0/cover no-repeat;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.__moduficate_img_cooking {
+  margin-right: 50px;
+  margin-left: 10px;
+}
+
 .text_cooking_process {
   color: #fff;
   display: -webkit-box;
@@ -266,12 +203,12 @@ body._lock {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
   width: 50%;
   padding: 10px;
-  line-height: 1.2;
+  line-height: 1.5;
 }
 
 .page__section_3 {
@@ -322,6 +259,17 @@ body._lock {
   padding: 20px;
   grid-area: text_block_1;
   margin: 10px;
+  -webkit-transform: translate(0px, -100px);
+          transform: translate(0px, -100px);
+  opacity: 0;
+  -webkit-transition: all 0.6s ease 0s;
+  transition: all 0.6s ease 0s;
+}
+
+._mod_text_smoking_1.__active_scroll {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
 }
 
 ._mod_text_smoking_2 {
@@ -331,6 +279,17 @@ body._lock {
   background-color: rgba(255, 255, 255, 0.8156862745);
   grid-area: text_block_2;
   margin: 10px;
+  -webkit-transform: translate(-100px, 0px);
+          transform: translate(-100px, 0px);
+  opacity: 0;
+  -webkit-transition: all 0.6s ease 0s;
+  transition: all 0.6s ease 0s;
+}
+
+._mod_text_smoking_2.__active_scroll {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
 }
 
 ._mod_text_smoking_3 {
@@ -340,6 +299,17 @@ body._lock {
   color: #ffffff;
   grid-area: text_block_3;
   margin: 10px;
+  -webkit-transform: translate(-100px, 0px);
+          transform: translate(-100px, 0px);
+  opacity: 0;
+  -webkit-transition: all 0.6s ease 0s;
+  transition: all 0.6s ease 0s;
+}
+
+._mod_text_smoking_3.__active_scroll {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
 }
 
 ._mod_text_smoking_4 {
@@ -349,19 +319,29 @@ body._lock {
   background-color: rgba(255, 255, 255, 0.8156862745);
   grid-area: text_block_4;
   margin: 10px;
+  -webkit-transform: translate(0px, 100px);
+          transform: translate(0px, 100px);
+  opacity: 0;
+  -webkit-transition: all 0.6s ease 0s;
+  transition: all 0.6s ease 0s;
+}
+
+._mod_text_smoking_4.__active_scroll {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
 }
 
 .auquauntance_block {
   max-width: 900px;
   margin: 0 auto;
-  padding: 75px 0;
+  padding: 75px 0 0 0;
 }
 
 .discription_title_block1_container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 0 20px 0;
   padding: 20px;
 }
 
@@ -378,16 +358,16 @@ body._lock {
 }
 
 .img_block_1 {
-  background: url(/img/auquauntance_block_img_1.jpg) 0 0/cover no-repeat;
+  background: url(/img/test_img_1.jpeg) bottom/cover no-repeat;
   width: 50%;
-  max-height: 200px;
+  max-height: 300px;
   margin: 15px;
 }
 
 .img_block_2 {
-  background: url(/img/auquauntance_block_img_2.jpg) 0 50%/cover no-repeat;
+  background: url(/img/test_img_2.jpeg) center/cover no-repeat;
   width: 50%;
-  max-height: 200px;
+  max-height: 500px;
   margin: 15px;
 }
 
@@ -397,6 +377,17 @@ body._lock {
   text-align: center;
   font-weight: 700;
   margin: 0 0 20px 0;
+  -webkit-transform: translate(0px, -70px);
+          transform: translate(0px, -70px);
+  opacity: 0;
+  -webkit-transition: all 0.7s ease 0s;
+  transition: all 0.7s ease 0s;
+}
+
+.title.__active_scroll {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
 }
 
 .subtitle {
@@ -406,7 +397,38 @@ body._lock {
   line-height: 1.2;
   font-size: 16px;
   font-weight: 500;
-  padding: 20px;
+  padding: 0 10px;
+  -webkit-transform: translate(0px, 120px);
+          transform: translate(0px, 120px);
+  opacity: 0;
+  -webkit-transition: all 0.7s ease 0s;
+  transition: all 0.7s ease 0s;
+}
+
+._position_subtitle {
+  padding: 0 10px;
+  margin-bottom: 75px;
+}
+
+.subtitle.__active_scroll {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
+}
+
+.discription_title_block1 {
+  width: 50%;
+  -webkit-transform: translate(0px, 100px);
+          transform: translate(0px, 100px);
+  opacity: 0;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.discription_title_block1.__active_scroll {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
 }
 
 .discription_title_block1, .discription_title_block2 {
@@ -420,15 +442,10 @@ body._lock {
   font-weight: 300;
 }
 .discription_title_block1 ul, .discription_title_block2 ul {
-  padding: 20px 0 0 0;
   min-height: 80%;
 }
 .discription_title_block1 ul:last-child, .discription_title_block2 ul:last-child {
   margin: 0 0 30px 0;
-}
-
-.discription_title_block1 {
-  width: 50%;
 }
 
 .discription_title {
@@ -440,12 +457,79 @@ body._lock {
 }
 
 .text_discription_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   padding: 5px;
   font-size: 16px;
+  line-height: 1.2;
+}
+
+.text_discription_block > span {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding: 0 10px;
 }
 
 .discription_title_block2 {
   width: 50%;
+  -webkit-transform: translate(0px, 100px);
+          transform: translate(0px, 100px);
+  opacity: 0;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.discription_title_block2.__active_scroll {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
+}
+
+.products_block {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 75px 0;
+}
+
+.fish_cut_container {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.fish_cut_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.product_fish_cut {
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.image_fish_cut {
+  max-width: 250px;
+}
+
+.title_product_fish_cut {
+  max-width: 250px;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #000000;
+  text-align: center;
+  padding: 10px;
+  height: 80px;
+  background-color: rgba(221, 218, 218, 0.9529411765);
 }
 
 .partners_block {
@@ -559,419 +643,64 @@ body._lock {
   display: -ms-flexbox;
   display: flex;
   max-width: 200px;
-  width: 100%;
 }
 
-@media (max-width: 991px) {
-  .menu__icon {
-    z-index: 5;
-    display: block;
-    position: relative;
-    width: 30px;
-    height: 18px;
-    cursor: pointer;
-  }
-
-  .menu__icon span,
-.menu__icon::before,
-.menu__icon::after {
-    left: 0;
-    position: absolute;
-    z-index: 5;
-    height: 10%;
-    width: 100%;
-    -webkit-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
-    background-color: #ffffff;
-  }
-
-  .menu__icon::before,
-.menu__icon::after {
-    content: "";
-  }
-
-  .menu__icon::before {
-    top: 0;
-  }
-
-  .menu__icon::after {
-    bottom: 0;
-  }
-
-  .menu__icon span {
-    top: 50%;
-    -webkit-transform: scale(1) translate(0px, -50%);
-            transform: scale(1) translate(0px, -50%);
-  }
-
-  .menu__icon._active span {
-    -webkit-transform: scale(0) translate(0px, -50%);
-            transform: scale(0) translate(0px, -50%);
-  }
-
-  .menu__icon._active::before {
-    top: 50%;
-    -webkit-transform: rotate(-45deg) translate(0px, -50%);
-            transform: rotate(-45deg) translate(0px, -50%);
-  }
-
-  .menu__icon._active::after {
-    bottom: 50%;
-    -webkit-transform: rotate(45deg) translate(0px, 50%);
-            transform: rotate(45deg) translate(0px, 50%);
-  }
-
-  .header__menu {
-    width: 0;
-    padding-right: 30px;
-  }
-
-  .menu__body {
-    position: fixed;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background-color: #111111;
-    -webkit-transition: left 0.3s ease 0s;
-    transition: left 0.3s ease 0s;
-    padding: 100px 30px 30px 30px;
-    overflow: auto;
-  }
-
-  .menu__body._active {
-    left: 0;
-  }
-
-  .menu__body::before {
-    content: "";
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    height: 70px;
-    background-color: #111111;
-  }
-
-  .menu__list > li {
-    text-align: center;
-    padding: 0 0 40px 0;
-  }
-
-  .menu__list > li:last-child {
-    padding: 0;
-  }
-
-  .menu__link {
-    font-size: 28px;
-    padding: 10px;
-    font-weight: 400;
-  }
-
-  .discription_title_block1_container {
-    display: block;
-    margin: 0 auto;
-  }
-
-  .discription_title_block2_container {
-    display: block;
-    margin: 0 auto;
-  }
-
-  .discription_title_block1, .discription_title_block2 {
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-  }
-
-  .img_block_1 {
-    background: url(/img/auquauntance_block_img_1.jpg) 0 50%/cover no-repeat;
-    width: 100%;
-    min-height: 400px;
-    margin: 0 0 10px 0;
-  }
-
-  .img_block_2 {
-    display: none;
-  }
-
-  .img_block_3 {
-    background: url(/img/auquauntance_block_img_2.jpg) 0 50%/cover no-repeat;
-    width: 100%;
-    height: 400px;
-    margin: 0 0 10px 0;
-  }
-
-  .partners_grid_container {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 100px 100px 100px 100px 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px 100px 100px 100px 100px;
-  }
-
-  .partners_grid_container > *:nth-child(1) {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-  }
-
-  .partners_grid_container > *:nth-child(2) {
-    -ms-grid-row: 1;
-    -ms-grid-column: 2;
-  }
-
-  .partners_grid_container > *:nth-child(3) {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
-  }
-
-  .partners_grid_container > *:nth-child(4) {
-    -ms-grid-row: 2;
-    -ms-grid-column: 2;
-  }
-
-  .partners_grid_container > *:nth-child(5) {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-  }
-
-  .partners_grid_container > *:nth-child(6) {
-    -ms-grid-row: 3;
-    -ms-grid-column: 2;
-  }
-
-  .partners_grid_container > *:nth-child(7) {
-    -ms-grid-row: 4;
-    -ms-grid-column: 1;
-  }
-
-  .partners_grid_container > *:nth-child(8) {
-    -ms-grid-row: 4;
-    -ms-grid-column: 2;
-  }
-
-  .partners_grid_container > *:nth-child(9) {
-    -ms-grid-row: 5;
-    -ms-grid-column: 1;
-  }
-
-  .partners_grid_container > *:nth-child(10) {
-    -ms-grid-row: 5;
-    -ms-grid-column: 2;
-  }
-
-  .partners_grid_container > *:nth-child(11) {
-    -ms-grid-row: 6;
-    -ms-grid-column: 1;
-  }
-
-  .partners_grid_container > *:nth-child(12) {
-    -ms-grid-row: 6;
-    -ms-grid-column: 2;
-  }
-
-  .partners_grid_container > *:nth-child(13) {
-    -ms-grid-row: 7;
-    -ms-grid-column: 1;
-  }
-
-  .partners_grid_container > *:nth-child(14) {
-    -ms-grid-row: 7;
-    -ms-grid-column: 2;
-  }
+.view_more_btn_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 20px;
 }
-@media (min-width: 991px) {
-  .menu__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
 
-  .menu__list > li {
-    padding: 0 10px;
-  }
+.view_more_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #111111;
+  color: #ffffff;
+  width: 260px;
+  height: 70px;
 }
-@media (max-width: 767px) {
-  .smoking_history_block {
-    width: 100%;
-    margin: 0 auto;
-    padding: 75px 0;
-  }
-
-  .smoking_process_cintainer {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
-    -ms-grid-rows: minmax(100px 1fr) 1fr 1fr 1fr;
-    grid-template-rows: minmax(100px 1fr) 1fr 1fr 1fr;
-        grid-template-areas: "text_block_1" "text_block_2" "text_block_3" "text_block_4";
-  }
-
-  ._mod_text_smoking_1 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-area: text_block_1;
-  }
-
-  ._mod_text_smoking_2 {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-area: text_block_2;
-    background-color: black;
-    color: #ffffff;
-  }
-
-  ._mod_text_smoking_3 {
-    -ms-grid-row: 2;
-    -ms-grid-column: 3;
-    grid-area: text_block_3;
-    background-color: #ffffff;
-    color: #111111;
-  }
-
-  ._mod_text_smoking_4 {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-area: text_block_4;
-    background-color: black;
-    color: #ffffff;
-  }
-
-  @media (max-width: 767px){
-
-  ._mod_text_smoking_1 {
-      -ms-grid-row: 1;
-      -ms-grid-column: 1;
-      -ms-grid-column-span: 1;
-  }
-
-  ._mod_text_smoking_2 {
-      -ms-grid-row: 2;
-      -ms-grid-column: 1;
-      -ms-grid-column-span: 1;
-  }
-
-  ._mod_text_smoking_3 {
-      -ms-grid-row: 3;
-      -ms-grid-column: 1;
-  }
-
-  ._mod_text_smoking_4 {
-      -ms-grid-row: 4;
-      -ms-grid-column: 1;
-      -ms-grid-column-span: 1;
-  }
-  }
-
-  .text_smoking_process {
-    margin: 20px;
-    padding: 20px;
-  }
-
-  ._mod_text_smoking_1 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-  }
-
-  ._mod_text_smoking_2 {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-  }
-
-  ._mod_text_smoking_3 {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-  }
-
-  ._mod_text_smoking_4 {
-    -ms-grid-row: 4;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-  }
+.view_more_btn h3 {
+  font-size: 1rem;
+  text-transform: uppercase;
 }
-@media (max-width: 575px) {
-  .partners_grid_container {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
-    -ms-grid-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
-  }
-  .partners_grid_container > *:nth-child(1) {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(2) {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(3) {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(4) {
-    -ms-grid-row: 4;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(5) {
-    -ms-grid-row: 5;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(6) {
-    -ms-grid-row: 6;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(7) {
-    -ms-grid-row: 7;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(8) {
-    -ms-grid-row: 8;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(9) {
-    -ms-grid-row: 9;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(10) {
-    -ms-grid-row: 10;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(11) {
-    -ms-grid-row: 11;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(12) {
-    -ms-grid-row: 12;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(13) {
-    -ms-grid-row: 13;
-    -ms-grid-column: 1;
-  }
 
-  .logo_baner_container {
-    background: url(/img/bg_section_1.jpg) 50%/cover no-repeat;
-  }
+.view_more_btn:hover {
+  background-color: rgba(221, 218, 218, 0.9529411765);
+  color: #000000;
+  border: 1px solid #000000;
+}
+.view_more_btn:hover .view_more_arrow {
+  display: none;
+}
+.view_more_btn:hover .view_more_arrow_hover {
+  display: block;
+}
 
-  .logo_img_style {
-    width: 300px;
-  }
+.view_more_arrow {
+  max-width: 20px;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  margin: 0 10px;
+}
+
+.view_more_arrow_hover {
+  display: none;
+  max-width: 20px;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  margin: 0 10px;
 }
